[package]
name = "ip_updater"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.14"
openssl = { version = "0.10", features = ["vendored"] }
openssl-probe = "0.1.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rusoto_core = "0.46.0"
rusoto_credential = "0.46.0"
rusoto_route53 = "0.46.0"
tokio = "1.5.0"
